manifest/trilium.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: trilium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium-deployment
  namespace: trilium
  labels:
    app: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trilium
  template:
    metadata:
      labels:
        app: trilium
    spec:
      containers:
      - name: trilium
        image: zadam/trilium:latest
        volumeMounts:
        - name: trilium-vol
          mountPath: /home/node/trilium-data
        ports:
        - containerPort: 8080
      volumes:
        - name: trilium-vol
          persistentVolumeClaim:
            claimName: trilium-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: trilium-service
  namespace: trilium
  labels:
    app: trilium
spec:
  selector:
    app: trilium
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium
  namespace: trilium
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: trilium.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trilium-service
            port:
              number: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trilium
  namespace: trilium
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - "trilium.<path:stringreplacesecret#domain>"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: trilium
      port: 8080
